[package]
name = "aerostream2"
version = "0.1.0"
edition = "2021"
description = "Aerostream is to use AT protocols."
license = "Apache-2.0"
repository = "https://github.com/shigepon7/aerostream2/"
documentation = "https://docs.rs/aerostream2/"
homepage = "https://github.com/shigepon7/aerostream2/"
keywords = ["bluesky", "atproto"]

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
ciborium = "0.2.2"
dotenvy = "0.15.7"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
reqwest-websocket = "0.4.4"
rs-car = "0.4.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_with = "3.12.0"
tracing = "0.1.41"
tokio = { version = "1.42.0", features = ["full"] }
mime_guess = "2.0.5"
indexmap = "2.7.0"
lindera = { version = "0.38.1", features = ["ipadic"] }
async-trait = "0.1.84"
base64 = "0.22.1"
data-encoding = "2.6.0"
tower-http = { version = "0.6.2", features = ["timeout"] }
