[package]
description = "Aerostream is to use AT protocols."
documentation = "https://docs.rs/aerostream2/"
edition = "2021"
homepage = "https://github.com/shigepon7/aerostream2/"
keywords = ["bluesky", "atproto"]
license = "Apache-2.0"
name = "aerostream2"
repository = "https://github.com/shigepon7/aerostream2/"
version = "0.1.0"

[dependencies]
async-trait = "0.1.86"
axum = {version = "0.8.1", features = ["macros"]}
base64 = "0.22.1"
chrono = {version = "0.4.39", features = ["serde"]}
ciborium = "0.2.2"
data-encoding = "2.7.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
indexmap = "2.7.1"
ipld-core = {version = "0.4.1", features = ["serde"]}
lindera = {version = "0.39.0", features = ["ipadic"]}
mime_guess = "2.0.5"
reqwest = {version = "0.12.12", features = ["json"]}
reqwest-websocket = "0.4.4"
rs-car = "0.4.1"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
serde_with = "3.12.0"
tokio = {version = "1.43.0", features = ["full"]}
tower-http = {version = "0.6.2", features = ["timeout"]}
tracing = "0.1.41"
